some more changes; mainly making the lesson plans adhere to 3 lessons and making the about page look better

--- a/LessonPlans/index.html
+++ b/LessonPlans/index.html
@@ -71,6 +71,93 @@
             </div>
 
             <div class="content-row">
+                <div>
+                    <div class="raised-card flex">
+                        <div id="mission-label" style="display: flex">
+                            <div>
+                                <div class="mission-text">OUR LESSON PLANS</div>
+                            </div>
+                        </div>
+                        <div id="mission-content">
+                            The Dive Beneath the Surface project uses experiential learning to most effectively teach elementary
+                            school students science and engineering core concepts critical to successful STEM careers. Specifically,
+                            DBS will use marine organisms and the ocean environment to teach the Next Generation Science Standards
+                            Disciplinary Core Idea “Structure, Function, and Information Processing” to 4th graders (1). A series of
+                            three lesson plans culminates in each student learning how to “construct an argument that plants and animals
+                            have internal and external structures that function to support survival, growth, behavior, and reproduction
+                            (NGSS Performance Expectation 4-LS1-1)(1).” Each Lesson lasts about 30 minutes. Lessons 1 and 3 are conducted
+                            in the classroom, and Lesson 2 is an interactive “Live Dive” between students in the classroom and Cal Poly
+                            scientific SCUBA divers in the ocean.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-row">
+                <div class="wide-card clickable-card" onclick="lesson1()">
+                    <div class="wide-card-left image-div">
+                        <div class="image-text"><div>Lesson 1</div></div>
+                        <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                    </div>
+                    <div class="wide-card-right">
+                        <div class="wide-card-title">
+                            Lesson 1
+                            <i class="fa fa-external-link" style="padding-left: 3px;"></i>
+                        </div>
+                        <div class="wide-card-content">
+                            Through an interactive experience comparing object densities in relation to water density,
+                            students explore the physical properties of water and the challenges it presents to animal
+                            functions such as movement, staying on the seafloor, and buoyancy. Next, students investigate
+                            specific structures of marine organisms (e.g., fish swim bladder and fins, kelp holdfast, sea
+                            star and urchin tube feet) and relate them to human-made objects (e.g., balloon, buoy, anchor,
+                            suction cup), in order to understand biological adaptations and conceptualize how humans have
+                            mimicked nature through engineering.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-row">
+                <div class="wide-card clickable-card" onclick="lesson1()">
+                    <div class="wide-card-left image-div">
+                        <div class="image-text"><div>Lesson 2</div></div>
+                        <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                    </div>
+                    <div class="wide-card-right">
+                        <div class="wide-card-title">
+                            Lesson 2
+                            <i class="fa fa-external-link" style="padding-left: 3px;"></i>
+                        </div>
+                        <div class="wide-card-content">
+                            Using underwater audio/video technology and YouTube Live, students engage in real-time (“live”) 
+                            communication with Cal Poly scientific SCUBA divers in the ocean. They pose questions to the divers 
+                            and connect their knowledge of structure and function to marine life along the California central coast.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="content-row">
+                <div class="wide-card clickable-card" onclick="lesson1()">
+                    <div class="wide-card-left image-div">
+                        <div class="image-text"><div>Lesson 3</div></div>
+                        <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                    </div>
+                    <div class="wide-card-right">
+                        <div class="wide-card-title">
+                            Lesson 3
+                            <i class="fa fa-external-link" style="padding-left: 3px;"></i>
+                        </div>
+                        <div class="wide-card-content">
+                            Students apply their knowledge of structure and function to engineering by designing, drawing and then 
+                            comparing marine organisms with specific anatomical structures to support their survival, growth, behavior 
+                            and reproduction.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!--<div class="content-row">
                 <div class="flex">
                     <div class="col-md-6">
                         <div class="clickable-card" onclick="lesson1()">
@@ -139,7 +226,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <div id="footer">
             <hr />
