changed Index to index on home page to test that out

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 <body>
 
     <div id="mySidenav" class="sidenav">
-        <a class="active" href="Index.html">Home</a>
-        <a href="LessonPlans/Index.html">Lessons</a>
-        <a href="Events/Index.html">Events</a>
-        <a href="Videos/Index.html">Videos</a>
-        <a href="Background/Index.html">About</a>
-        <a href="Contact/Index.html">Contact</a>
+        <a class="active" href="index.html">Home</a>
+        <a href="LessonPlans/index.html">Lessons</a>
+        <a href="Events/index.html">Events</a>
+        <a href="Videos/index.html">Videos</a>
+        <a href="Background/index.html">About</a>
+        <a href="Contact/index.html">Contact</a>
     </div>
 
     <div class="container" id="overall-container">
