--- a/Contact/index.html
+++ b/Contact/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,89 +16,112 @@
 
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <script src="../script.js"></script>
 </head>
 
 <body>
+    <div id="mySidenav" class="sidenav">
+        <a href="../index.html">Home</a>
+        <a href="../LessonPlans/index.html">Lessons</a>
+        <a href="../Events/index.html">Events</a>
+        <a href="../Videos/index.html">Videos</a>
+        <a href="../Background/index.html">About</a>
+        <a class="active" href="#">Contact</a>
+    </div>
 
-<!--navbar-->
-<div class="container" id="overall-container">
-    <div class="container" id="header-div">
-        <div class="logo">
-            <span><img width="80" height="80" src="../Images/logo.jpg" alt="DBS Logo"></span>
-            <span class="title">Dive Beneath the Surface</span>
-        </div>
-        <div id="nav-menu-div">
-            <div class="my-nav my-nav-pills" id="nav-menu-ul">
-                <div class="border"></div>
-                <div class="li"><a href="../Index.html">Home</a></div>
-                <div class="border"></div>
-                <div class="li"><a href="../LessonPlans/Index.html"><span class="pill-label">Lessons</span></a></div>
-                <div class="border"></div>
-                <div class="li"><a href="../Events/Index.html"><span class="pill-label">Events</span></a></div>
-                <div class="border"></div>
-                <div class="li"><a href="../Videos/Index.html"><span class="pill-label">Videos</span></a></div>
-                <div class="border"></div>
-                <div class="li"><a href="../Background/Index.html"><span class="pill-label">About</span></a></div>
-                <div class="border"></div>
-                <div class="li active"><a href="#"><span class="pill-label">Contact</span></a></div>
+    <!--navbar-->
+    <div class="container" id="overall-container">
+        <div class="container" id="header-div">
+            <a href="../index.html" class="nav-menu-left">
+                <div class="logo">
+                    <img width="80" height="80" src="../Images/logo.jpg" alt="DBS Logo">
+                    <div class="title">
+                        <div>
+                            Dive Beneath the Surface
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <div id="nav-menu-div">
+                <div class="my-nav my-nav-pills" id="nav-menu-ul">
+                    <div class="border"></div>
+                    <div class="li"><a href="../index.html">Home</a></div>
+                    <div class="border"></div>
+                    <div class="li"><a href="../LessonPlans/index.html"><span class="pill-label">Lessons</span></a></div>
+                    <div class="border"></div>
+                    <div class="li"><a href="../Events/index.html"><span class="pill-label">Events</span></a></div>
+                    <div class="border"></div>
+                    <div class="li"><a href="../Videos/index.html"><span class="pill-label">Videos</span></a></div>
+                    <div class="border"></div>
+                    <div class="li"><a href="../Background/index.html"><span class="pill-label">About</span></a></div>
+                    <div class="border"></div>
+                    <div class="li active"><a href="#"><span class="pill-label">Contact</span></a></div>
+                </div>
+                <div id="nav-collapsed" onclick="openNav()">
+                    <i class="fa fa-bars"></i>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 
 
-<div class="container">
+    <div class="container">
 
-    <div class="bg">
-        <h1 style="color:#fff;font-family:sans-serif;text-align:center;">B A C K G R O U N D</h1>
-    </div>
+        <div class="bg">
+            <h1 style="color:#fff;font-family:sans-serif;text-align:center;">B A C K G R O U N D</h1>
+        </div>
 
 
-    <div class="content-row">
-        <div class="raised-card flex">
-            <div id="contact-label">
-                <div id="contact-head">
+        <div class="content-row">
+            <div class="raised-card flex">
+                <div id="contact-label">
+                    <div id="contact-head">
+                        <p>
+                            CONTACT US
+                        </p>
+                    </div>
                     <p>
-                        CONTACT US
+                        <br>
+                        <b>Email</b> <br> <small>
+                            <a href="mailto:divebeneaththesurface@gmail.com?subject=DBS Website Form">
+                                dbs@calpoly.edu
+                            </a>
+                            <br>
+                        </small>
+                    </p>
+                    <p>
+                        <br>
+                        <b>Address</b> <br> <small>
+                            Crow White<br>Biology Department, Cal Poly<br>1 Grand Ave<br>
+                            San Luis Obispo<br>CA 93407
+                        </small>
                     </p>
                 </div>
-                <p>
-                    <br>
-                    <b>Email</b> <br> <small>
-                    <a href="mailto:divebeneaththesurface@gmail.com?subject=DBS Website Form">
-                        dbs@calpoly.edu
-                    </a>
-                    <br></small>
-                </p>
-                <p>
-                    <br>
-                    <b>Address</b> <br> <small>Crow White<br>Biology Department, Cal Poly<br>1 Grand Ave<br>
-                San Luis Obispo<br>CA 93407</small>
-                </p>
-            </div>
 
-            <div class="contact-form">
-                <div id="map" style="width:100%;height:500px"></div>
+                <div class="contact-form">
+                    <div id="map" style="width:100%;height:500px"></div>
 
-                <script>
-                   function myMap() {
-                      var myCenter = new google.maps.LatLng(51.508742,-0.120850);
-                      var mapCanvas = document.getElementById("map");
-                      var mapOptions = {center: myCenter, zoom: 12};
-                      var map = new google.maps.Map(mapCanvas, mapOptions);
-                      var marker = new google.maps.Marker({position:myCenter});
-                      marker.setMap(map);
-                   }
-                </script>
+                    <script>
+                        function myMap() {
+                            var myCenter = new google.maps.LatLng(51.508742, -0.120850);
+                            var mapCanvas = document.getElementById("map");
+                            var mapOptions = { center: myCenter, zoom: 12 };
+                            var map = new google.maps.Map(mapCanvas, mapOptions);
+                            var marker = new google.maps.Marker({ position: myCenter });
+                            marker.setMap(map);
+                        }
+                    </script>
 
-                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbPs1ySIASx5mtaX8WqyDO2q8hz8s2Rgk&callback=myMap"></script>
+                    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbPs1ySIASx5mtaX8WqyDO2q8hz8s2Rgk&callback=myMap"></script>
+                </div>
+
             </div>
 
         </div>
 
     </div>
 
-</div>
+        </div>
 
 
 </body>
