--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="container" id="overall-container">
         <div class="container" id="header-div">
-            <a href="Index.html" class="nav-menu-left">
+            <a href="index.html" class="nav-menu-left">
                 <div class="logo">
                         <img width="80" height="80" src="Images/logo.jpg" alt="DBS Logo">
                     <div class="title">
@@ -50,15 +50,15 @@
                     <div class="border"></div>
                     <div class="li active"><a href="#">Home</a></div>
                     <div class="border"></div>
-                    <div class="li"><a href="LessonPlans/Index.html"><span class="pill-label">Lessons</span></a></div>
+                    <div class="li"><a href="LessonPlans/index.html"><span class="pill-label">Lessons</span></a></div>
                     <div class="border"></div>
-                    <div class="li"><a href="Events/Index.html"><span class="pill-label">Events</span></a></div>
+                    <div class="li"><a href="Events/index.html"><span class="pill-label">Events</span></a></div>
                     <div class="border"></div>
-                    <div class="li"><a href="Videos/Index.html"><span class="pill-label">Videos</span></a></div>
+                    <div class="li"><a href="Videos/index.html"><span class="pill-label">Videos</span></a></div>
                     <div class="border"></div>
-                    <div class="li"><a href="Background/Index.html"><span class="pill-label">About</span></a></div>
+                    <div class="li"><a href="Background/index.html"><span class="pill-label">About</span></a></div>
                     <div class="border"></div>
-                    <div class="li"><a href="Contact/Index.html"><span class="pill-label">Contact</span></a></div>
+                    <div class="li"><a href="Contact/index.html"><span class="pill-label">Contact</span></a></div>
                 </div>
                 <div id="nav-collapsed" onclick="openNav()">
                     <i class="fa fa-bars"></i>
